--- a/app/src/main/res/layout/fragment_view_schedule_meal_plans.xml
+++ b/app/src/main/res/layout/fragment_view_schedule_meal_plans.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="View Meal Plans"
+            android:text="View All Planned Meal"
             android:textColor="@color/black"
             android:textSize="22sp"
             android:textStyle="bold" />
