--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="green">#B919FD4B</color>
     <color name="light_green">#E8F5E9</color>
     <color name="blue">#1F5EFF</color>
+    <color name="lowYellow">#FFD042</color>
 </resources>
