--- a/app/src/main/res/layout/activity_google_location.xml
+++ b/app/src/main/res/layout/activity_google_location.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".GoogleLocationActivity">
 
     <LinearLayout
@@ -22,6 +23,8 @@
             android:visibility="gone" />
 
     </LinearLayout>
+
+
 
     <fragment
         android:id="@+id/map"
@@ -53,5 +56,14 @@
         android:layout_toEndOf="@+id/refreshProcess"
         android:background="@drawable/blue_border_rounded_corner"
         android:spinnerMode="dropdown" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_marginTop="600dp"
+        android:layout_marginStart="320dp"
+        android:src="@drawable/ic_baseline_add_24"
+        app:layout_anchorGravity="bottom|right|end" />
 
 </RelativeLayout>
